# pip-licenses

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  dev-requirements.in  dev-requirements.txt  piplicenses.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  test_piplicenses.py
.github/: dependabot.yml
.github/workflows/: CD-PyPi.yml  python-package.yml
piplicenses/: __init__.py  __main__.py  argparse.py  const.py  parse.py  table.py  utils.py
stubs/prettytable/: __init__.pyi  prettytable.pyi
tests/: conftest.py  test_argparse.py  test_main.py  test_parse.py  test_piplicenses.py  test_table.py  test_utils.py
tests/fixtures/: unicode_characters.txt
tests/integration/: test_integration.py
