[build-system]
requires = ["setuptools>=40.9.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pip-licenses"
description = "Dump the software license list of Python packages installed with pip."
dynamic = ["version", "readme"]
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "raimon", email = "raimon49@hotmail.com"}
]
keywords = ["pip", "pypi", "package", "license", "check"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: System Shells",
    "Typing :: Typed"
]
dependencies = [
    "prettytable >= 3.12.0",
    "tomli >= 2"
]

[project.optional-dependencies]
dev = [
    "autopep8",
    "black",
    "docutils",
    "isort",
    "wheel",
    "mypy",
    "pip-tools",
    "pypandoc",
    "pytest-cov",
    "pytest-pycodestyle",
    "pytest-runner",
    "twine",
    "tomli-w"
]

[project.urls]
Homepage = "https://github.com/raimon49/pip-licenses"
Releases = "https://github.com/raimon49/pip-licenses/releases"
Issues = "https://github.com/raimon49/pip-licenses/issues"

[project.scripts]
pip-licenses = "piplicenses:main"

[tool.setuptools]
py-modules = ["piplicenses"]

[tool.setuptools.dynamic]
version = {attr = "piplicenses.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.pytest.ini_options]
addopts = "--pycodestyle -v --cov --cov-report term-missing"

[tool.black]
line-length = 79

[tool.isort]
line_length = 72
known_first_party = ["piplicenses"]
profile = "black"

[tool.mypy]
exclude = ["venv"]

[tool.coverage.run]
include = ["piplicenses.py"]
