[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pip-licenses"
description = "Dump the software license list of Python packages installed with pip."
dynamic = ["version", "readme"]
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "raimon", email = "raimon49@hotmail.com"}
]
keywords = ["pip", "pypi", "package", "license", "check"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: System Shells",
    "Typing :: Typed"
]
dependencies = [
    "prettytable >= 3.12.0",
    "tomli >= 2;python_version<'3.11'"
]

[dependency-groups]
dev = [
    "docutils>=0.19", # frontend.get_default_settings()
    "wheel",
    "mypy",
    "pip",
    "pypandoc",
    "pytest<9.0.0", # Python 3.9
    "pytest-cov",
    "pytest-runner",
    "ruff",
    "setuptools",
    "tomli-w",
    "twine",
    "types-docutils",
    "uv",
]

[project.urls]
homepage = "https://github.com/raimon49/pip-licenses"
releasenotes = "https://github.com/raimon49/pip-licenses/releases"
issues = "https://github.com/raimon49/pip-licenses/issues"

[project.scripts]
pip-licenses = "piplicenses:main"

[tool.setuptools]
py-modules = ["piplicenses"]

[tool.setuptools.dynamic]
version = {attr = "piplicenses.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report term-missing"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = [
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
    "SIM",    # flake8-simplify
    "FLY",    # flynt
    "I",      # isort
    "PERF",   # Perflint
    "PGH",    # pygrep-hooks
    "UP",     # pyupgrade
    "FURB",   # refurb
    "RUF",    # Ruff-specific rules
]
ignore = [
    "C401",   # Unnecessary generator (rewrite as a set comprehension)
    "F841",   # Local variable is assigned to but never used
    "SIM300", # Yoda condition detected
    "RUF005", # Consider unpacking instead of concatenation
    "RUF021", # Parenthesize `a and b` expressions when chaining `and` and `or` together, to make the precedence clear
]
isort.known-first-party = ["piplicenses"]

[tool.mypy]
exclude = ["venv"] # and thus venv[subprocess].CalledProcessError

[tool.coverage.run]
include = ["piplicenses.py"]
