[build-system]
requires = ["setuptools>=82.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pip-licenses"
description = "Dump the software license list of Python packages installed with pip."
dynamic = ["version", "readme"]
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "raimon", email = "raimon49@hotmail.com"}
]
keywords = ["pip", "pypi", "package", "license", "check"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: System Shells",
    "Typing :: Typed"
]
dependencies = [
    "prettytable >= 3.12.0",
    "tomli >= 2;python_version<'3.11'"
]

[project.optional-dependencies]
dev = [
    "docutils>=0.19", # frontend.get_default_settings()
    "wheel",
    "mypy",
    "pip-tools",
    "pypandoc",
    "pytest-cov",
    "pytest-runner",
    "ruff",
    "twine",
    "tomli-w",
    "virtualenv>=21.1.0",
]

[project.urls]
homepage = "https://github.com/raimon49/pip-licenses"
releasenotes = "https://github.com/raimon49/pip-licenses/releases"
issues = "https://github.com/raimon49/pip-licenses/issues"

[project.scripts]
pip-licenses = "piplicenses:main"

[tool.setuptools]
py-modules = ["piplicenses"]

[tool.setuptools.dynamic]
version = {attr = "piplicenses.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report term-missing"

[tool.ruff]
line-length = 79
# Same as Black.
indent-width = 4
# assume python 3.9 support
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "ANN",     # flake8-annotations
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
    "SIM",    # flake8-simplify
    "FLY",    # flynt
    "I",      # isort
    "PERF",   # Perflint
    "PGH",    # pygrep-hooks
    "UP",     # pyupgrade
    "FURB",   # refurb
    "RUF",    # Ruff-specific rules
]
ignore = [
    "C401",   # Unnecessary generator (rewrite as a set comprehension)
    "F841",   # Local variable is assigned to but never used
    "SIM300", # Yoda condition detected
    "RUF005", # Consider unpacking instead of concatenation
    "RUF021", # Parenthesize `a and b` expressions when chaining `and` and `or` together, to make the precedence clear
]
isort.known-first-party = ["piplicenses"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)(_{2,2})?)$"  # See https://regex101.com/r/U0tpDT/2

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
# misc.
docstring-code-line-length = 79

[tool.mypy]
exclude = ["venv"]   # and thus venv[subprocess].CalledProcessError
python_version = 3.9 # should be the earliest supported version

[tool.coverage.run]
include = ["piplicenses.py"]

