[metadata]
author_email = raimon49@hotmail.com
project_urls =
    Releases = https://github.com/raimon49/pip-licenses/releases
    Issues = https://github.com/raimon49/pip-licenses/issues
keywords = pip pypi package license check
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Systems Administration
    Topic :: System :: System Shells

[options]
packages = find:
include_package_data = True
python_requires = ~=3.6
py_modules =
    piplicenses
setup_requires =
    setuptools >= 40.9.0
    pytest-runner
install_requires =
    PTable
tests_require =
    docutils
    pytest-cov
    pytest-pycodestyle
    pytest-runner

[options.extras_require]
test =
    docutils
    pytest-cov
    pytest-pycodestyle
    pytest-runner

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
addopts = --pycodestyle -v --cov piplicenses --cov-report term-missing

[tool:isort]
# https://github.com/timothycrosley/isort
multi_line_output = 4
line_length = 72
known_first_party =
    piplicenses
